[gd_scene load_steps=3 format=2]

[ext_resource path="res://map_gen.gd" type="Script" id=1]
[ext_resource path="res://working.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="input_layout" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 11.8972
margin_top = 102.682
margin_right = 211.897
margin_bottom = 460.682
size_flags_vertical = 2

[node name="seed_input" type="TextEdit" parent="input_layout"]
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 200, 28 )
size_flags_vertical = 0
text = "23333"

[node name="confirm_button" type="Button" parent="input_layout"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 28 )
size_flags_vertical = 0
text = "confirm"

[node name="random_button" type="Button" parent="input_layout"]
margin_top = 64.0
margin_right = 200.0
margin_bottom = 92.0
rect_min_size = Vector2( 200, 28 )
size_flags_vertical = 0
text = "random and confirm"

[node name="Label" type="Label" parent="input_layout"]
margin_top = 96.0
margin_right = 200.0
margin_bottom = 110.0
text = "octaves"

[node name="octaves_value" type="Label" parent="input_layout/Label"]
margin_left = 57.0
margin_top = 1.0
margin_right = 195.0
margin_bottom = 15.0
text = "3"

[node name="octaves_slider" type="HSlider" parent="input_layout"]
margin_top = 114.0
margin_right = 200.0
margin_bottom = 130.0
min_value = 1.0
value = 3.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="input_layout"]
margin_top = 134.0
margin_right = 200.0
margin_bottom = 148.0
text = "lacunarity"

[node name="lacunarity_value" type="Label" parent="input_layout/Label2"]
margin_left = 72.3129
margin_top = 0.663422
margin_right = 184.313
margin_bottom = 14.6634
text = "2.1"

[node name="lacunarity_slider" type="HSlider" parent="input_layout"]
margin_top = 152.0
margin_right = 200.0
margin_bottom = 168.0
max_value = 20.0
step = 0.3
value = 2.1
ticks_on_borders = true

[node name="Label3" type="Label" parent="input_layout"]
margin_top = 172.0
margin_right = 200.0
margin_bottom = 186.0
text = "period"

[node name="period_value" type="Label" parent="input_layout/Label3"]
margin_left = 54.4005
margin_top = 0.663391
margin_right = 117.4
margin_bottom = 14.6634
text = "64"

[node name="period_slider" type="HSlider" parent="input_layout"]
margin_top = 190.0
margin_right = 200.0
margin_bottom = 206.0
min_value = 1.0
max_value = 255.0
value = 64.0
ticks_on_borders = true

[node name="Label4" type="Label" parent="input_layout"]
margin_top = 210.0
margin_right = 200.0
margin_bottom = 224.0
text = "persistence"

[node name="persistence_value" type="Label" parent="input_layout/Label4"]
margin_left = 81.6007
margin_top = 0.663452
margin_right = 198.601
margin_bottom = 14.6635
text = "0.5"

[node name="persistence_slider" type="HSlider" parent="input_layout"]
margin_top = 228.0
margin_right = 200.0
margin_bottom = 244.0
max_value = 1.0
step = 0.05
value = 0.5
ticks_on_borders = true

[node name="Label5" type="Label" parent="input_layout"]
editor/display_folded = true
margin_top = 248.0
margin_right = 200.0
margin_bottom = 262.0
text = "base_height"

[node name="base_height_value" type="Label" parent="input_layout/Label5"]
margin_left = 87.9906
margin_right = 172.991
margin_bottom = 14.0
text = "0.5"

[node name="base_height_slider" type="HSlider" parent="input_layout"]
margin_top = 266.0
margin_right = 200.0
margin_bottom = 282.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="Label6" type="Label" parent="input_layout"]
editor/display_folded = true
margin_top = 286.0
margin_right = 200.0
margin_bottom = 300.0
text = "noise_power"

[node name="noise_power_value" type="Label" parent="input_layout/Label6"]
margin_left = 87.9906
margin_right = 172.991
margin_bottom = 14.0
text = "0.5"

[node name="noise_power_slider" type="HSlider" parent="input_layout"]
margin_top = 304.0
margin_right = 200.0
margin_bottom = 320.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="Label7" type="Label" parent="input_layout"]
margin_top = 324.0
margin_right = 200.0
margin_bottom = 338.0
text = "width_noise"

[node name="width_noise_value" type="Label" parent="input_layout/Label7"]
margin_left = 87.9906
margin_right = 172.991
margin_bottom = 14.0
text = "0.3"

[node name="width_noise_slider" type="HSlider" parent="input_layout"]
margin_top = 342.0
margin_right = 200.0
margin_bottom = 358.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="map_container" type="CenterContainer" parent="."]
margin_left = 440.758
margin_top = 272.558
margin_right = 440.758
margin_bottom = 272.558

[node name="map_viewer" type="Sprite" parent="map_container"]

[node name="working" type="Sprite" parent="."]
position = Vector2( 202.16, 85.7376 )
texture = ExtResource( 2 )
[connection signal="pressed" from="input_layout/confirm_button" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="input_layout/random_button" to="." method="_on_random_button_pressed"]
[connection signal="value_changed" from="input_layout/octaves_slider" to="." method="_on_octaves_slider_value_changed"]
[connection signal="value_changed" from="input_layout/lacunarity_slider" to="." method="_on_lacunarity_slider_value_changed"]
[connection signal="value_changed" from="input_layout/period_slider" to="." method="_on_period_slider_value_changed"]
[connection signal="value_changed" from="input_layout/persistence_slider" to="." method="_on_persistence_slider_value_changed"]
[connection signal="value_changed" from="input_layout/base_height_slider" to="." method="_on_base_height_slider_value_changed"]
[connection signal="value_changed" from="input_layout/noise_power_slider" to="." method="_on_noise_power_slider_value_changed"]
[connection signal="value_changed" from="input_layout/width_noise_slider" to="." method="_on_width_noise_slider_value_changed"]
